Revision history for {{$dist->name}}

{{$NEXT}}
	Bug fixes:
	* Pass unhandled frames to separate ->dispatch_unhandled_frame method so
	that ::Tracer class is able to ignore these.
	* Provide empty ->write method for ::Tracer since we don't expect to have
	an on_write handler here.

0.999_006 2013-08-10 01:35:08 Europe/London
	Features:
	* send_frame and receive_frame events on Protocol::SPDY::Base, for hooks on
	frame send/receive - both will be called with the relevant frame instance.

	Documentation:
	* Clean up some inconsistencies in spdy/2 vs. spdy/3 versioning

	Bug fixes:
	* Placeholder classes for the old Protocol::SPDY::Frame::Control::SynStream
	and Protocol::SPDY::Frame::Control::SynReply packages, to avoid cpan upgrade
	from attempting to install 0.001.

	Examples:
	* Added dumper.pl example for analysing captured streams

0.999_005 2013-08-08 22:51:28 Europe/London
	No functional changes

	Bug fixes:
	* Previous release was built with PREREQ_FATAL in an attempt to pick up
	the minimum perl dependency - ExtUtils::MakeMaker docs point out that
	this is a really bad idea.

0.999_004 2013-08-08 21:36:58 Europe/London
	Features:
	* send_settings method for notifying remote of our estimated/current
	settings - needed for disabling server pusher (max_concurrent_streams=0)

	Bug fixes:
	* Initial settings notification method used incorrect ::SETTINGS class

0.999_003 2013-08-08 05:40:40 Europe/London
	Features:
	* Window update messages now handled by Protocol::SPDY::Stream,
	rather than leaving the implementation to send them manually.
	* Incoming settings frames are now applied
	* restore_initial_settings method for sending persisted values

	Bug fixes:
	* Length calculation was incorrect, this could cause undef frames.
	* ->headers method support in Protocol::SPDY::Stream, needed for
	proper server push support
	* ->window_update method support in Protocol::SPDY::Stream
	* FIN would cause remote_finished Future to fire before the data
	event was invoked
